Updated manuscript and bibtex file (R1)

--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -22,7 +22,7 @@ author_note: |
   Cameron J. Anderson is at the Department of Psychology, Neuroscience & Behaviour, McMaster University, Canada.
 
 abstract: |
- This meta-analysis examines music emotion recognition (MER) models published between 2014 and 2024, focusing on predictions of valence, arousal, and categorical emotions. A total of 553 studies were identified, of which 96 full-text articles were assessed, resulting in a final review of 34 studies. These studies reported 204 models, including 86 for emotion classification and 204 for regression. Using the best-performing model from each study, we found that valence and arousal were predicted with reasonable accuracy (r = 0.67 and r = 0.81, respectively), while classification models achieved an accuracy of 0.87 as measured with Matthews correlation coefficient. Across modelling approaches, linear and tree-based methods generally outperformed neural networks in regression tasks, whereas neural networks and support vector machines (SVMs) showed highest performance in classification tasks. We highlight key recommendations for future MER research, emphasizing the need for greater transparency, feature validation, and standardized reporting to improve comparability across studies.  
+ This meta-analysis examines music emotion recognition (MER) models published between 2014 and 2024, focusing on predictions of valence, arousal, and categorical emotions. A total of 553 studies were identified, of which 96 full-text articles were assessed, resulting in a final review of 34 studies. These studies reported 290 models, including 86 for emotion classification and 204 for regression. Using the best-performing model from each study, we found that valence and arousal were predicted with reasonable accuracy (r = 0.67 and r = 0.81, respectively), while classification models achieved an accuracy of 0.87 as measured with Matthews correlation coefficient. Across modelling approaches, linear and tree-based methods generally outperformed neural networks in regression tasks, whereas neural networks and support vector machines (SVMs) showed highest performance in classification tasks. We highlight key recommendations for future MER research, emphasizing the need for greater transparency, feature validation, and standardized reporting to improve comparability across studies.  
 keywords          : "music, emotion, recognition, meta-analysis"
 wordcount         : "5555"
 figsintext        : yes
@@ -100,7 +100,7 @@ In predictive MER tasks, dataset sizes tend to be modest in comparison to other 
 
 Predictive accuracy in MER tasks has improved as datasets and models have become more sophisticated; Regression models for arousal/valence have been reported to peak at 58%/28% accuracy in 2008 [@yang2008], 70%/26% in 2010 [@huq2010automated], and 67%/46% in 2021 [@yang2021an]. In the same period, classification rates have increased from 53% [@downie_music_2008] to 70% [@park2017representation] to 83% [@sarkar2020recognition]. Comparing these past efforts, however, is challenging due to inconsistencies between studies in metrics, modelling architectures, datasets, and evaluation criteria. Although we assume that overall accuracy has improved significantly over the past decade, valence remains more challenging to predict than arousal.
 
-Recent studies have sought to enhance emotion prediction by identifying more relevant feature sets [@panda2020audio; @chowdhury2021perceived], integrating low-, mid-, and high-level features through multimodal data [@celma_foafing_2006], and leveraging neural networks to learn features directly from audio [@zhang2016br; @agarwal2021an]. These approaches aim to overcome ceiling effects in predictive accuracy [@downie_music_2008], which some scholars refer to as a *semantic gap* [@wiggins_semantic_2009; @celma_foafing_2006]. However, this prediction ceiling may be better understood as an inherent *measurement error* arising from annotations, feature representations, and model limitations. Although isolating the sources of these errors remains infeasible at this stage, comparing success rates across modelling techniques, feature set sizes, and other meaningful factors offers a step toward addressing this challenge. To date, however, no study has systematically compared the results of the diverse approaches employed in MER research.
+Recent studies have sought to enhance emotion prediction by identifying more relevant feature sets [@panda2020audio; @chowdhury2021perceived], integrating low-, mid-, and high-level features through multimodal data [@celma_foafing_2006], and leveraging neural networks to learn features directly from audio [@zhang2016br; @agarwal2021an]. Other efforts have attempted to improve the MER pipeline by accounting for differences between studies in how emotion constructs are represented [@kang2025], as well as how emotions are represented in different languages [@hu2025; @lee2025]. These approaches aim to overcome ceiling effects in predictive accuracy [@downie_music_2008], which some scholars refer to as a *semantic gap* [@wiggins_semantic_2009; @celma_foafing_2006]. However, this prediction ceiling may be better understood as an inherent *measurement error* arising from annotations, feature representations, and model limitations. Although isolating the sources of these errors remains infeasible at this stage, comparing success rates across modelling techniques, feature set sizes, and other meaningful factors offers a step toward addressing this challenge. To date, however, no study has systematically compared the results of the diverse approaches employed in MER research.
 
 ## Aims
 
@@ -144,7 +144,7 @@ First we describe the overall pattern of data (regression vs. classification, mo
 
 <!-- table 1 is part of `analysis/preprocessing.qmd` updated 20/2/2025) -->
 
-TABLE 1: Summary of data
+TABLE 1: Summary of data. To identify the studies and the models across techniques, see online materials.
 
 |   | Regression | Classification | Total |
 |:-----------------|:------------------|:-----------------|:-----------------|
@@ -196,9 +196,9 @@ The results indicate that valence can generally be predicted with moderately acc
 
 #### Quantifying study heterogeneity
 
-Further analysis of between-study heterogeneity, as indexed by the $\tau^2$ (0.148) and Higgins & Thompson's $I^2$ statistic [@higgins2002quantifying] at 98.4%, reveals substantial heterogeneity. Since $I^2$ is heavily influenced by study size (with larger N leading to lower sampling error), its value may be less insightful in this context. In contrast, $\tau^2$, which is less sensitive to the number of studies and directly linked to the outcome metric (*r*), provides a more reliable measure of heterogeneity in this case. Also, we note that because the overall heterogeneity in the data is high, we are cautious in our interpretation of the publication bias [@van-aertwicherts_2016].
+Further analysis of between-study heterogeneity, as indexed by the $\tau^2$ (0.148) and Higgins & Thompson's $I^2$ statistic [@higgins2002quantifying] at 98.4%, reveals substantial heterogeneity. Since $I^2$ is heavily influenced by study size (with larger N leading to lower sampling error), its value may be less insightful in this context. In contrast, $\tau^2$, which is less sensitive to the number of studies and directly linked to the outcome metric (*r*), provides a more reliable measure of heterogeneity in this case. Also, we note that because the overall heterogeneity in the data is high, we are cautious in our interpretation of the publication bias [@van-aertwicherts_2016]. 
 
-To better understand the effects across studies and the nature of the observed heterogeneity, Figure 2 presents a forest of the random-effects model, based on the best-performing models from all studies. In terms of the forest plot, the range of prediction values (correlations) is broad, spanning from 0.13 to 0.92, with all studies except Koh et al. (2023) demonstrating evidence of positive correlations. A mean estimate of 0.67 is achieved by 15 out of the 22 models. While the confidence intervals are generally narrow due to the large sample sizes in each study, there are exceptions, such as smaller sample sizes in @beveridge2018po (n = 20), and in @griffiths2021am (n = 40). If we explore the asymmetry of the model prediction rate across standard error, we do not observe particular asymmetries that would indicate particular bias in the reported studies. This is verified by non-significant Egger's test ($\beta$ = 5.05, CI95% -0.99-11.09, *t* = 1.64, *p* = 0.112, @eggersmith_1997).
+To better understand the effects across studies and the nature of the observed heterogeneity, Figure 2 presents a forest of the random-effects model, based on the best-performing models from all studies. Effects of individual studies are represented by rectangles, with size reflecting the weight based on the sample size. Lines reflect 95% confidence intervals around study effects, and the summary effect appears at the bottom of the plot, represented as a dark diamond [@lewis2001]. In terms of the forest plot, the range of prediction values (correlations) is broad, spanning from 0.13 to 0.92, with all studies except Koh et al. (2023) demonstrating evidence of positive correlations. A mean estimate of 0.67 is achieved by 15 out of the 22 models. While the confidence intervals are generally narrow due to the large sample sizes in each study, there are exceptions, such as smaller sample sizes in @beveridge2018po (n = 20), and in @griffiths2021am (n = 40). If we explore the asymmetry of the model prediction rate across standard error, we do not observe particular asymmetries that would indicate particular bias in the reported studies. This is verified by non-significant Egger's test ($\beta$ = 5.05, CI95% -0.99-11.09, *t* = 1.64, *p* = 0.112, @eggersmith_1997).
 
 Coming back to the mean of valence correlation of 0.669 by all studies and the possible impact of study heterogeneity on this estimation, we also calculated the correlation without the studies that lie outside the 95% CI for pooled effect. This left 12 studies in the data and resulted in the meta-analytical pooled correlation of 0.686 (CI95% 0.635-0.731). In other words, despite the large variation in the correlations and standard errors across the studies, this variation in itself does not seem to be a significant driver behind the overall effect.
 
@@ -354,6 +354,14 @@ CA: This is a great idea, and reminds me we also have the Panda categories, whic
 TE: Or if we submit the meta-analysis soon and create a more pragmatic breakdown of what is the state of the art technologies in MER, this could be sufficient for a brief article separately. The selling point would not be the prediction rate, but quality control issues and the techniques/tools/crossvals/datasets chosen so far.  -->
 ```
 
+## Limitations (in progress)
+
+(i) basing sample size on stimuli
+
+(ii) Limitations in the selection of databases and definition of search terms (how they might miss particular relevant studies)
+
+(iii) How quality issues led us to remove many papers that would otherwise be included based on the inclusion criteria
+
 ## Recommendations for future MER studies
 
 Broadly speaking, the present study revealed uncomfortably large variability in overall quality control and reporting practices in MER studies. In many cases, the reporting was insufficient to determine the features used in the models or their sources. Additionally, a significant number of studies had to be discarded due to a lack of information about the data, model architectures, or outcome measures. We summarize these issues below as recommendations for improving (1) reporting and transparency, (2) feature definition, (3) dataset scale and content, and (4) the selection of emotion frameworks.
@@ -370,7 +378,7 @@ It would be also highly beneficial to share models and features transparently. I
 
 <!-- ### Feature definition/validations -->
 
-One of the crucial aspects of modelling is the choice of features, their quantity, and their validation. In the present materials, we observe a continuum defined by two extremes: one approach relies on domain knowledge, starting with a limited number of features that are assumed to be perceptually relevant, while the other employs a large number of features, allowing the model to determine which are most relevant for prediction. The former is typically favored in music psychology studies, whereas the latter is more common in engineering and machine learning fields. Our results suggest that the domain knowledge-driven approach leads to the highest model accuracy across all studies and techniques. However, as our sample includes studies from the past 10 years, it is important to note that deep learning models have only gained prominence in this field since 2021. Consequently, it is too early to generalize that models based on domain knowledge, with a limited number of features and classical techniques, will continue to outperform machine learning approaches that utilize a large (300+) feature sets. We believe that the relatively modest size of datasets available so far has prevented deep learning approaches from fully leveraging their potential to learn generalizable patterns in the data. For reference, the size of the datasets in MER are currently comparable to dataset sizes for modelling facial expressions (median N=502, @krumhuber2017) and speech expressions (median of 1287, @hashem2023). However, annotated datasets for visual scenes and objects tend to be much larger, often exceeding 100,000 annotated examples [@deng2009imagenet; @krishna2017visual]. Datasets of these magnitudes seem to be required for appropriate utilisation of deep learning algorithms [@alwosheel2018; @sun2017revisiting], which may explain the modest results observed in the music emotion recognition studies.
+One of the crucial aspects of modelling is the choice of features, their quantity, and their validation. In the present materials, we observe a continuum defined by two extremes: one approach relies on domain knowledge, starting with a limited number of features that are assumed to be perceptually relevant, while the other employs a large number of features, allowing the model to determine which are most relevant for prediction. The former is typically favored in music psychology studies, whereas the latter is more common in engineering and machine learning fields. Our results suggest that the domain knowledge-driven approach leads to the highest model accuracy across all studies and techniques. However, as our sample includes studies from the past 10 years, it is important to note that deep learning models have only gained prominence in this field since 2021. Consequently, it is too early to generalize that models based on domain knowledge, with a limited number of features and classical techniques, will continue to outperform machine learning approaches that utilize a large (300+) feature sets. We believe that the relatively modest size of datasets available so far has prevented deep learning approaches from fully leveraging their potential to learn generalizable patterns in the data. For reference, the size of the datasets in MER are currently comparable to dataset sizes for modelling facial expressions (median N=502, @krumhuber2017) and speech expressions (median of 1287, @hashem2023). However, annotated datasets for visual scenes and objects tend to be much larger, often exceeding 100,000 annotated examples [@deng2009imagenet; @krishna2017visual]. In many applications, large datasets would be required for appropriate utilization of deep-learning algorithms, however, recent proposals to overcome the dataset-size limitation involve the use of pre-training and unsupervised techniques to learn general features (see MERT, @yizhi2023mert). While this approach has not yet fully resolved the issue, the bottleneck related to dataset size may be partially mitigated through the judicious use of self-supervised learning.
 
 <!-- ### Validation -->
 
@@ -382,7 +390,7 @@ At present, the majority of the datasets are Western pop, which represent only a
 
 <!-- ### Emotion frameworks chosen -->
 
-Finally, we note that the relevance of the emotion frameworks used in MER is not always explicitly discussed. The majority of studies rely either on valence and arousal or some combination of basic emotion categories. However, these frameworks may have limited usefulness in practical applications that aim to capture the diversity of emotion experiences with music. For example, some experiences align with models of music-induced emotions, such as GEMS by @zentner2008emotions or AESTHEMOS [@schindler2017me], whereas other explore what emotions can be expressed through music [@eerola2025what], or what are assumed to be worthwhile clusters of concepts (moods, emotions, tags) from crowdsourced, non-theory driven data [@saari_et_al_2015]. Understanding the limitations of different emotion taxonomies can also help improve modelling practices. For example, some scholars have explored treating MER as a circular regression problem, which can help overcome practical challenges such as the difficulty of relating to the abstract dimensions of valence and arousal, as well as the modelling assumptions required when translating a circular affective space to regression problems [@dufour2021us].
+Finally, we note that the relevance of the emotion frameworks used in MER is not always explicitly discussed. The majority of studies rely either on valence and arousal or some combination of basic emotion categories. However, these frameworks may have limited usefulness in practical applications that aim to capture the diversity of emotion experiences with music. For example, some experiences align with models of music-induced emotions, such as GEMS by @zentner2008emotions or AESTHEMOS [@schindler2017me], whereas other explore what emotions can be expressed through music [@eerola2025what], or what are assumed to be worthwhile clusters of concepts (moods, emotions, tags) from crowdsourced, non-theory driven data [@saari_et_al_2015]. Understanding the limitations of different emotion taxonomies can also help improve modelling practices. For example, some scholars have explored treating MER as a circular regression problem, which can help overcome practical challenges such as the difficulty of relating to the abstract dimensions of valence and arousal, as well as the modelling assumptions required when translating a circular affective space to regression problems [@han2009smers; @dufour2021us].
 
 The present meta-analysis demonstrates that significant progress has been made toward developing accurate and scalable MER models over the past decade. Future efforts should prioritize feature validation, standardized reporting, the construction of larger and more diverse datasets, and the transparent sharing of research materials to ensure further consistent improvements in MER.
 
